tests/transpiler/x/java/two-sum.error
exit status 1
Main.java:4: error: cannot find symbol
    static list twoSum(list nums, int target) {
                       ^
  symbol:   class list
  location: class Main
Main.java:4: error: cannot find symbol
    static list twoSum(list nums, int target) {
           ^
  symbol:   class list
  location: class Main
2 errors
